add phone image and worked on the class-information

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </div>
         </nav>
         <div class="information">
+            <img src="./images/phone.jpeg" alt="mobile photo" class="mobile">
             <div class="circle">
                 <div class="feature one">
                     <img src="./images/camera.jpg" alt="camera">
