add an arrow photo and worked on the class-controls

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="information">
             <img src="./images/phone.jpeg" alt="mobile photo" class="mobile">
-            <div class="circle">
+            <div id="circle">
                 <div class="feature one">
                     <img src="./images/camera.jpg" alt="camera">
                     <div>
@@ -52,7 +52,13 @@
                 </div>
             </div>
         </div>
+        <div class="controls">
+            <img src="./images/arrow.png" alt="arrow-up"  id="upBtn">
+            <h3>Features</h3>
+            <img src="./images/arrow.png" alt="arrow-down"  id="downBtn">
+        </div>
     </div>
+   
 </body>
 </html>
 
