--- a/index.html
+++ b/index.html
@@ -58,7 +58,20 @@
             <img src="./images/arrow.png" alt="arrow-down"  id="downBtn">
         </div>
     </div>
-   
+    <script>
+        let circle =document.getElementById("circle");
+        let upBtn =document.getElementById("upBtn");
+        let downBtn =document.getElementById("downBtn");
+
+        let rotateValue = circle.style.transform;
+        let rotateSum;
+
+        upBtn.onclick = function(){
+            rotateSum = rotateValue + "rotate(-90deg)";
+            circle.style.transform = rotateSum;
+            rotateValue = rotateSum
+        } 
+    </script>
 </body>
 </html>
 
