--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Website Design Using HTML and CSS</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="main">
@@ -23,29 +24,35 @@
             </div>
         </nav>
         <div class="information">
-            <img src="./images/phone.jpeg" alt="mobile photo" class="mobile">
+            <div class="overlay">
+
+            </div>
+            <img src="./images/phone.jpeg" alt="mobile-photo" class="mobile">
             <div id="circle">
                 <div class="feature one">
-                    <img src="./images/camera.jpg" alt="camera">
+                    <i class="fa-solid fa-camera camera"></i>
                     <div>
                         <h1>Camera</h1>
                         <p>12MP, Wide Angle Lens</p>
                     </div>
                 </div>
                 <div class="feature two">
-                    <img src="./images/processor.jpeg" alt="processor"><div>
+                    <i class="fa-solid fa-microchip processor"></i>
+                    <div>
                         <h1>Processor</h1>
                         <p>Snapdragon Octa-core 11nm</p>
                     </div>
                 </div>
                 <div class="feature three">
-                    <img src="./images/display.png" alt="display"><div>
+                    <i class="fa-solid fa-display display"></i>
+                    <div>
                         <h1>Display</h1>
                         <p>6.5" Mini-Drop Fullscreen</p>
                     </div>
                 </div>
                 <div class="feature four">
-                    <img src="./images/battery.jpeg" alt="battery"><div>
+                    <i class="fa-solid fa-battery-full battery"></i>
+                    <div>
                         <h1>Battery Life</h1>
                         <p>5000mAh, 720Hrs Standby</p>
                     </div>
@@ -68,6 +75,12 @@
 
         upBtn.onclick = function(){
             rotateSum = rotateValue + "rotate(-90deg)";
+            circle.style.transform = rotateSum;
+            rotateValue = rotateSum
+        } 
+
+        downBtn.onclick = function(){
+            rotateSum = rotateValue + "rotate(90deg)";
             circle.style.transform = rotateSum;
             rotateValue = rotateSum
         } 
